--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI Calculator - SmartHelper.io</title>
-    <meta id="meta-desc" name="description" content="Calculate your Body Mass Index (BMI) accurately with SmartHelper. Professional weight analysis for health and fitness.">
+    <meta id="meta-desc" name="description" content="Professional BMI Calculator - analyze your weight and body mass index instantly for better health management. Precise results based on WHO standards.">
     <style>
         :root {
             --bg-dark: #0f172a;
@@ -34,7 +34,6 @@
         .result-row { margin-top: 25px; border-top: 1px solid var(--border-color); padding-top: 20px; }
         .result-field { background: #f0fdf4 !important; color: #166534 !important; border-color: var(--accent-green) !important; font-weight: 900; }
         
-        /* FIX CLS: Reserve space for status */
         .bmi-status-box { min-height: 50px; text-align: center; margin-top: 15px; }
         .bmi-status { font-weight: 900; font-size: 22px; padding: 10px; border-radius: 8px; display: none; }
 
@@ -116,8 +115,8 @@
             desc: "Professional BMI Calculator - analyze your weight and body mass index instantly for better health management.",
             weight: "Weight (kg):", height: "Height (cm):", bmiRes: "Your BMI:",
             other: "Other Elite Tools", 
-            footer: "SmartHelper.io provides precision tools for health and finance. Our BMI calculator uses the standard WHO formula to help you monitor your physical condition accurately. All data is processed locally on your device to ensure your private health information remains secure.",
-            seo: `<h2>Why Check Your BMI?</h2><p>Body Mass Index is a key indicator used by health professionals to categorize weight-related health risks. Monitoring it helps in maintaining a balanced lifestyle.</p><h2>Accuracy Matters</h2><p>Our tool provides instant feedback based on your height and weight inputs with high precision.</p>`,
+            footer: "SmartHelper.io is your premier destination for high-precision health tools and body mass analysis. Our BMI calculator uses the standard WHO formula to help you monitor your physical condition with maximum accuracy. All your data is processed locally to ensure that your private health information remains completely secure.",
+            seo: `<h2>Why Check Your BMI?</h2><p>Body Mass Index is a key indicator used by health professionals to categorize weight-related health risks. Monitoring it helps in maintaining a balanced lifestyle.</p><h2>Accuracy Matters</h2><p>Our tool provides instant feedback based on your height and weight inputs with high precision. It is the perfect way to track your fitness progress over time.</p>`,
             unit: "Unit Converter", perc: "Percentage", vat: "VAT Calc", loan: "Loan Calc", 
             disc: "Discount", tip: "Tip Calc", cur: "Currency Converter",
             privacy: "Privacy Policy", terms: "Terms of Use",
@@ -129,8 +128,8 @@
             desc: "Професійний калькулятор ІМТ - миттєво аналізуйте свою вагу та індекс маси тіла для контролю здоров'я.",
             weight: "Вага (кг):", height: "Зріст (см):", bmiRes: "Ваш ІМТ:",
             other: "Інші професійні інструменти", 
-            footer: "SmartHelper.io надає точні інструменти для здоров'я та фінансів. Наш калькулятор ІМТ використовує стандартну формулу ВООЗ, щоб допомогти вам точно контролювати свій фізичний стан. Усі дані обробляються локально на вашому пристрої, щоб ваші особисті дані залишалися в безпеці.",
-            seo: `<h2>Навіщо перевіряти ІМТ?</h2><p>Індекс маси тіла є ключовим показником, який використовується фахівцями для оцінки ризиків для здоров’я. Його моніторинг допомагає підтримувати збалансований спосіб життя.</p><h2>Точність понад усе</h2><p>Наш інструмент забезпечує миттєвий результат на основі вашого зросту та ваги з високою точністю.</p>`,
+            footer: "SmartHelper.io — ваш надійний сервіс для високоточних інструментів здоров'я та аналізу маси тіла. Наш калькулятор ІМТ використовує стандартну формулу ВООЗ, щоб допомогти вам контролювати фізичний стан з максимальною точністю. Усі дані обробляються локально, щоб ваша приватна інформація залишалася в повній безпеці.",
+            seo: `<h2>Навіщо перевіряти ІМТ?</h2><p>Індекс маси тіла є ключовим показником, який використовується фахівцями для оцінки ризиків для здоров’я. Його моніторинг допомагає підтримувати збалансований спосіб життя.</p><h2>Точність понад усе</h2><p>Наш інструмент забезпечує миттєвий результат на основі вашого зросту та ваги з високою точністю. Це ідеальний спосіб відстежувати ваш прогрес у фітнесі з часом.</p>`,
             unit: "Конвертер", perc: "Відсотки", vat: "ПДВ", loan: "Кредити", 
             disc: "Знижки", tip: "Чайові", cur: "Курси валют",
             privacy: "Конфіденційність", terms: "Умови",
@@ -142,8 +141,8 @@
             desc: "Calculadora de IMC profesional: analice su peso e índice de masa corporal al instante para una vida saludable.",
             weight: "Peso (kg):", height: "Altura (cm):", bmiRes: "Tu IMC:",
             other: "Otras herramientas", 
-            footer: "SmartHelper.io ofrece herramientas de precisión para la salud y las finanzas. Nuestra calculadora de IMC utiliza la fórmula estándar de la OMS para ayudarle a controlar su estado físico de forma precisa. Todos los datos se procesan localmente en su dispositivo.",
-            seo: `<h2>¿Por qué revisar su IMC?</h2><p>El índice de masa corporal es un indicador clave para categorizar los riesgos de salud. Mantener un IMC saludable mejora la calidad de vida.</p>`,
+            footer: "SmartHelper.io es su destino principal para herramientas de salud de alta precisión y análisis de masa corporal. Nuestra calculadora de IMC utiliza la fórmula estándar de la OMS para ayudarle a controlar su condición física con la máxima precisión. Todos sus datos se procesan localmente para garantizar que su información privada permanezca segura.",
+            seo: `<h2>¿Por qué revisar su IMC?</h2><p>El índice de masa corporal es un indicador clave utilizado por profesionales para categorizar los riesgos de salud. Mantener un IMC saludable ayuda a tener un estilo de vida equilibrado.</p><h2>La precisión importa</h2><p>Nuestra herramienta ofrece resultados instantáneos basados en su altura y peso con gran precisión. Es la forma perfecta de seguir su progreso físico a lo largo del tiempo.</p>`,
             unit: "Unidades", perc: "Porcentaje", vat: "IVA", loan: "Préstamos", 
             disc: "Descuento", tip: "Propina", cur: "Moneda",
             privacy: "Privacidad", terms: "Términos",
@@ -155,8 +154,8 @@
             desc: "Professioneller BMI-Rechner - analysieren Sie Ihr Gewicht und Ihren Body-Mass-Index sofort für Ihre Gesundheit.",
             weight: "Gewicht (kg):", height: "Größe (cm):", bmiRes: "Ihr BMI:",
             other: "Andere Elite-Tools", 
-            footer: "SmartHelper.io bietet Präzisionswerkzeuge für Gesundheit und Finanzen. Unser BMI-Rechner verwendet die Standard-WHO-Formel, um Ihren körperlichen Zustand genau zu überwachen. Alle Daten werden lokal auf Ihrem Gerät verarbeitet.",
-            seo: `<h2>Warum den BMI prüfen?</h2><p>Der Body-Mass-Index ist ein wichtiger Indikator zur Einstufung gesundheitlicher Risiken. Monitoring hilft bei einem gesunden Lebensstil.</p>`,
+            footer: "SmartHelper.io ist Ihre erste Adresse für hochpräzise Gesundheitswerkzeuge und Körpermasseanalyse. Unser BMI-Rechner verwendet die Standard-WHO-Formel, um Ihnen zu helfen, Ihren körperlichen Zustand mit maximaler Genauigkeit zu überwachen. Alle Daten werden lokal verarbeitet, um sicherzustellen, dass Ihre privaten Informationen sicher bleiben.",
+            seo: `<h2>Warum den BMI prüfen?</h2><p>Der Body-Mass-Index ist ein wichtiger Indikator, der von Fachleuten zur Einstufung gesundheitlicher Risiken verwendet wird. Monitoring hilft bei der Aufrechterhaltung eines gesunden Lebensstils.</p><h2>Genauigkeit zählt</h2><p>Unser Tool liefert sofortige Ergebnisse basierend auf Ihrer Größe und Ihrem Gewicht mit hoher Präzision. Es ist der perfekte Weg, um Ihren Fitness-Fortschritt über die Zeit zu verfolgen.</p>`,
             unit: "Konverter", perc: "Prozent", vat: "MwSt", loan: "Kredit", 
             disc: "Rabatt", tip: "Trinkgeld", cur: "Währung",
             privacy: "Datenschutz", terms: "AGB",
