--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -141,27 +141,27 @@
             desc: "Calculadora de IMC profesional: analice su peso e índice de masa corporal al instante para una vida saludable.",
             weight: "Peso (kg):", height: "Altura (cm):", bmiRes: "Tu IMC:",
             other: "Otras herramientas", 
-            footer: "SmartHelper.io es su destino principal para herramientas de salud de alta precisión y análisis de masa corporal. Nuestra calculadora de IMC utiliza la fórmula estándar de la OMS para ayudarle a controlar su condición física con la máxima precisión. Todos sus datos se procesan localmente para garantizar que su información privada permanezca segura.",
-            seo: `<h2>¿Por qué revisar su IMC?</h2><p>El índice de masa corporal es un indicador clave utilizado por profesionales para categorizar los riesgos de salud. Mantener un IMC saludable ayuda a tener un estilo de vida equilibrado.</p><h2>La precisión importa</h2><p>Nuestra herramienta ofrece resultados instantáneos basados en su altura y peso con gran precisión. Es la forma perfecta de seguir su progreso físico a lo largo del tiempo.</p>`,
+            footer: "SmartHelper.io es su destino principal para herramientas de salud de alta precisión y análisis de masa corporal. Nuestra calculadora de IMC utiliza la fórmula estándar de la OMS para ayudarle a controlar su condición física con la máxima precisión. Todos sus datos se procesan localmente para garantizar que su información privada permanezca segura en todo momento y en cualquier lugar.",
+            seo: `<h2>¿Por qué revisar su IMC?</h2><p>El índice de masa corporal es un indicador clave utilizado por profesionales para categorizar los riesgos de salud. Mantener un IMC saludable ayuda a tener un estilo de vida equilibrado y activo.</p><h2>La precisión importa</h2><p>Nuestra herramienta ofrece resultados instantáneos basados en su altura y peso con gran precisión. Es la forma perfecta de seguir su progreso físico a lo largo del tiempo de manera profesional.</p>`,
             unit: "Unidades", perc: "Porcentaje", vat: "IVA", loan: "Préstamos", 
             disc: "Descuento", tip: "Propina", cur: "Moneda",
             privacy: "Privacidad", terms: "Términos",
             s1: "Bajo peso", s2: "Normal", s3: "Sobrepeso", s4: "Obesidad",
-            privText: "<h2>Privacidad</h2><p>No guardamos sus datos de salud.</p>",
-            termsText: "<h2>Términos</h2><p>El resultado es solo para fines informativos.</p>"
+            privText: "<h2>Privacidad</h2><p>No guardamos ni rastreamos sus datos de salud. Todos los cálculos se realizan instantáneamente en su propio navegador personal.</p>",
+            termsText: "<h2>Términos</h2><p>El resultado del IMC es solo para fines informativos. Por favor, consulte a un profesional médico calificado para obtener asesoramiento.</p>"
         },
         de: {
             desc: "Professioneller BMI-Rechner - analysieren Sie Ihr Gewicht und Ihren Body-Mass-Index sofort für Ihre Gesundheit.",
             weight: "Gewicht (kg):", height: "Größe (cm):", bmiRes: "Ihr BMI:",
             other: "Andere Elite-Tools", 
-            footer: "SmartHelper.io ist Ihre erste Adresse für hochpräzise Gesundheitswerkzeuge und Körpermasseanalyse. Unser BMI-Rechner verwendet die Standard-WHO-Formel, um Ihnen zu helfen, Ihren körperlichen Zustand mit maximaler Genauigkeit zu überwachen. Alle Daten werden lokal verarbeitet, um sicherzustellen, dass Ihre privaten Informationen sicher bleiben.",
-            seo: `<h2>Warum den BMI prüfen?</h2><p>Der Body-Mass-Index ist ein wichtiger Indikator, der von Fachleuten zur Einstufung gesundheitlicher Risiken verwendet wird. Monitoring hilft bei der Aufrechterhaltung eines gesunden Lebensstils.</p><h2>Genauigkeit zählt</h2><p>Unser Tool liefert sofortige Ergebnisse basierend auf Ihrer Größe und Ihrem Gewicht mit hoher Präzision. Es ist der perfekte Weg, um Ihren Fitness-Fortschritt über die Zeit zu verfolgen.</p>`,
+            footer: "SmartHelper.io ist Ihre erste Adresse für hochpräzise Gesundheitswerkzeuge und Körpermasseanalyse. Unser BMI-Rechner verwendet die Standard-WHO-Formel, um Ihnen zu helfen, Ihren körperlichen Zustand mit maximaler Genauigkeit zu überwachen. Alle Daten werden lokal verarbeitet, um sicherzustellen, dass Ihre privaten Informationen jederzeit vollständig geschützt bleiben.",
+            seo: `<h2>Warum den BMI prüfen?</h2><p>Der Body-Mass-Index ist ein wichtiger Indikator, der von Fachleuten zur Einstufung gesundheitlicher Risiken verwendet wird. Monitoring hilft bei der Aufrechterhaltung eines gesunden Lebensstils.</p><h2>Genauigkeit zählt</h2><p>Unser Tool liefert sofortige Ergebnisse basierend auf Ihrer Größe und Ihrem Gewicht mit hoher Präzision. Es ist der perfekte Weg, um Ihren Fitness-Fortschritt über die Zeit professionell zu verfolgen.</p>`,
             unit: "Konverter", perc: "Prozent", vat: "MwSt", loan: "Kredit", 
             disc: "Rabatt", tip: "Trinkgeld", cur: "Währung",
             privacy: "Datenschutz", terms: "AGB",
             s1: "Untergewicht", s2: "Normalgewicht", s3: "Übergewicht", s4: "Adipositas",
-            privText: "<h2>Datenschutz</h2><p>Ihre Daten bleiben auf Ihrem Gerät.</p>",
-            termsText: "<h2>AGB</h2><p>Der BMI-Wert dient nur zur Information.</p>"
+            privText: "<h2>Datenschutz</h2><p>Wir speichern oder verfolgen Ihre Gesundheitsdaten nicht. Alle Berechnungen werden sofort lokal in Ihrem Webbrowser durchgeführt.</p>",
+            termsText: "<h2>AGB</h2><p>Der BMI-Wert dient nur zur Information. Bitte konsultieren Sie einen qualifizierten Arzt für eine professionelle medizinische Beratung.</p>"
         }
     };
 
