--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         .tool-link-wide { grid-column: span 2; justify-self: center; width: calc(50% - 5px); }
 
         footer { border-top: 1px solid var(--border-color); padding: 30px 15px; text-align: center; font-size: 13px; color: var(--text-muted); width: 100%; box-sizing: border-box; }
-        .footer-info-block { border: 2px solid var(--border-glow); border-radius: 12px; padding: 18px; margin: 0 auto 20px auto; background: rgba(255, 255, 255, 0.05); text-align: left; max-width: 550px; width: 100%; box-sizing: border-box; line-height: 1.6; }
+        .footer-info-block { border: 2px solid var(--border-glow); border-radius: 12px; padding: 18px; margin: 0 auto 20px auto; background: rgba(255, 255, 255, 0.05); text-align: left; max-width: 600px; width: 100%; box-sizing: border-box; line-height: 1.6; }
         .footer-btn { background: none; border: none; color: var(--accent-green); text-decoration: underline; cursor: pointer; padding: 10px; font-weight: 900; font-family: inherit; font-size: 13px; min-height: 44px; }
         
         .modal { display: none; position: fixed; z-index: 10000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); overflow-y: auto; }
@@ -121,8 +121,8 @@
             desc: "Professional BMI Calculator - analyze your weight and body mass index instantly for better health management.",
             weight: "Weight (kg):", height: "Height (cm):", bmiRes: "Your BMI:",
             other: "Other Elite Tools", 
-            footer: "SmartHelper.io is your premier destination for high-precision health tools and body mass analysis. Our BMI calculator uses the standard WHO formula to help you monitor your physical condition with maximum accuracy. All your data is processed locally to ensure that your private health information remains completely secure.",
-            seo: `<h2>Why Check Your BMI?</h2><p>Body Mass Index is a key indicator used by health professionals to categorize weight-related health risks. Monitoring it helps in maintaining a balanced lifestyle.</p><h2>Accuracy Matters</h2><p>Our tool provides instant feedback based on your height and weight inputs with high precision. It is the perfect way to track your fitness progress over time.</p>`,
+            footer: "SmartHelper.io is your premier destination for high-precision health tools and body mass analysis. Our BMI calculator uses the standard WHO formula to help you monitor your physical condition with maximum accuracy. All your data is processed locally to ensure that your private health information remains completely secure. We prioritize user privacy and provide expert-level calculations for fitness tracking and health monitoring worldwide.",
+            seo: `<h2>Why Check Your BMI?</h2><p>Body Mass Index is a key indicator used by health professionals to categorize weight-related health risks. Monitoring it helps in maintaining a balanced lifestyle and preventing long-term issues.</p><h2>Accuracy Matters</h2><p>Our tool provides instant feedback based on your height and weight inputs with high precision. It is the perfect way to track your fitness progress over time using the latest scientific standards.</p>`,
             unit: "Unit Converter", perc: "Percentage", vat: "VAT Calc", loan: "Loan Calc", 
             disc: "Discount", tip: "Tip Calc", cur: "Currency Converter",
             privacy: "Privacy Policy", terms: "Terms of Use",
@@ -134,8 +134,8 @@
             desc: "Професійний калькулятор ІМТ - миттєво аналізуйте свою вагу та індекс маси тіла для контролю здоров'я.",
             weight: "Вага (кг):", height: "Зріст (см):", bmiRes: "Ваш ІМТ:",
             other: "Інші професійні інструменти", 
-            footer: "SmartHelper.io — ваш надійний сервіс для високоточних інструментів здоров'я та аналізу маси тіла. Наш калькулятор ІМТ використовує стандартну формулу ВООЗ, щоб допомогти вам контролювати фізичний стан з максимальною точністю. Усі дані обробляються локально, щоб ваша приватна інформація залишалася в повній безпеці.",
-            seo: `<h2>Навіщо перевіряти ІМТ?</h2><p>Індекс маси тіла є ключовим показником, який використовується фахівцями для оцінки ризиків для здоров’я. Його моніторинг допомагає підтримувати збалансований спосіб життя.</p><h2>Точність понад усе</h2><p>Наш інструмент забезпечує миттєвий результат на основі вашого зросту та ваги з високою точністю. Це ідеальний спосіб відстежувати ваш прогрес у фітнесі з часом.</p>`,
+            footer: "SmartHelper.io — ваш надійний сервіс для високоточних інструментів здоров'я та аналізу маси тіла. Наш калькулятор ІМТ використовує стандартну формулу ВООЗ, щоб допомогти вам контролювати фізичний стан з максимальною точністю. Усі дані обробляються локально, щоб ваша приватна інформація залишалася в повній безпеці. Ми прагнемо надавати найкращі інструменти для моніторингу здоров'я.",
+            seo: `<h2>Навіщо перевіряти ІМТ?</h2><p>Індекс маси тіла є ключовим показником, який використовується фахівцями для оцінки ризиків для здоров’я. Його моніторинг допоможе підтримувати збалансований спосіб життя та вчасно виявляти відхилення.</p><h2>Точність понад усе</h2><p>Наш інструмент забезпечує миттєвий результат на основі вашого зросту та ваги з високою точністю. Це ідеальний спосіб відстежувати ваш прогрес у фітнесі з часом відповідно до стандартів ВООЗ.</p>`,
             unit: "Конвертер", perc: "Відсотки", vat: "ПДВ", loan: "Кредити", 
             disc: "Знижки", tip: "Чайові", cur: "Курси валют",
             privacy: "Конфіденційність", terms: "Умови",
@@ -147,27 +147,27 @@
             desc: "Calculadora de IMC profesional: analice su peso e índice de masa corporal al instante para una vida saludable.",
             weight: "Peso (kg):", height: "Altura (cm):", bmiRes: "Tu IMC:",
             other: "Otras herramientas", 
-            footer: "SmartHelper.io es su plataforma líder para herramientas de salud de alta precisión y análisis detallado de la masa corporal. Nuestra calculadora de IMC utiliza la fórmula estándar de la OMS para ayudarle a monitorear su condición física con la mayor precisión posible. Todos sus datos personales se procesan localmente para garantizar que su privacidad y su información médica permanezcan totalmente protegidas en todo momento.",
-            seo: `<h2>¿Por qué revisar su IMC?</h2><p>El índice de masa corporal es un indicador clave utilizado por profesionales para categorizar los riesgos de salud. Mantener un IMC saludable ayuda a tener un estilo de vida equilibrado.</p><h2>La precisión importa</h2><p>Nuestra herramienta ofrece resultados instantáneos basados en su altura y peso con gran precisión. Es la forma perfecta de seguir su progreso físico a lo largo del tiempo.</p>`,
+            footer: "SmartHelper.io es su plataforma líder para herramientas de salud de alta precisión y análisis detallado de la masa corporal. Nuestra calculadora de IMC utiliza la fórmula estándar de la OMS para ayudarle a monitorear su condición física con la mayor precisión posible. Todos sus datos personales se procesan localmente para garantizar que su privacidad y su información médica permanezcan totalmente protegidas en todo momento y en cualquier lugar del mundo. Nos dedicamos a ofrecer soluciones digitales de alta calidad para el bienestar personal.",
+            seo: `<h2>¿Por qué revisar su IMC?</h2><p>El índice de masa corporal es un indicador clave utilizado por profesionales médicos para categorizar los riesgos de salud relacionados con el peso. Monitorear este valor ayuda a mantener un estilo de vida saludable y equilibrado a largo plazo.</p><h2>La precisión importa</h2><p>Nuestra herramienta ofrece resultados instantáneos basados en su altura y peso con una precisión excepcionalmente alta. Es la forma perfecta de seguir su progreso físico y fitness de manera constante y profesional.</p>`,
             unit: "Unidades", perc: "Porcentaje", vat: "IVA", loan: "Préstamos", 
             disc: "Descuento", tip: "Propina", cur: "Moneda",
             privacy: "Privacidad", terms: "Términos",
             s1: "Bajo peso", s2: "Normal", s3: "Sobrepeso", s4: "Obesidad",
-            privText: "<h2>Privacidad</h2><p>No guardamos sus datos de salud.</p>",
-            termsText: "<h2>Términos</h2><p>El resultado es solo para fines informativos.</p>"
+            privText: "<h2>Privacidad</h2><p>No guardamos ni rastreamos sus datos de salud de ninguna manera. Todos los cálculos se realizan localmente en su navegador.</p>",
+            termsText: "<h2>Términos</h2><p>El resultado del IMC es solo para fines informativos y educativos. Por favor, consulte a un profesional médico calificado.</p>"
         },
         de: {
             desc: "Professioneller BMI-Rechner - analysieren Sie Ihr Gewicht und Ihren Body-Mass-Index sofort für Ihre Gesundheit.",
             weight: "Gewicht (kg):", height: "Größe (cm):", bmiRes: "Ihr BMI:",
             other: "Andere Elite-Tools", 
-            footer: "SmartHelper.io ist Ihr erstklassiges Ziel für hochpräzise Gesundheitsinstrumente und die Analyse der Körpermasse. Unser BMI-Rechner verwendet die offizielle Standardformel der WHO, um Ihnen dabei zu helfen, Ihren körperlichen Zustand mit maximaler Genauigkeit zu überwachen. Alle Ihre Daten werden ausschließlich lokal verarbeitet, um sicherzustellen, dass Ihre privaten Gesundheitsinformationen absolut sicher und vertraulich bleiben.",
-            seo: `<h2>Warum den BMI prüfen?</h2><p>Der Body-Mass-Index ist ein wichtiger Indikator, der von Fachleuten zur Einstufung gesundheitlicher Risiken verwendet wird. Monitoring hilft bei der Aufrechterhaltung eines gesunden Lebensstils.</p><h2>Genauigkeit zählt</h2><p>Unser Tool liefert sofortige Ergebnisse basierend auf Ihrer Größe und Ihrem Gewicht mit hoher Präzision. Es ist der perfekte Weg, um Ihren Fitness-Fortschritt über die Zeit zu verfolgen.</p>`,
+            footer: "SmartHelper.io ist Ihr erstklassiges Ziel für hochpräzise Gesundheitsinstrumente und die detaillierte Analyse der Körpermasse. Unser BMI-Rechner verwendet die offizielle Standardformel der WHO, um Ihnen dabei zu helfen, Ihren körperlichen Zustand mit maximaler Genauigkeit zu überwachen. Alle Ihre Daten werden ausschließlich lokal verarbeitet, um sicherzustellen, dass Ihre privaten Gesundheitsinformationen absolut sicher, geschützt und vertraulich bleiben. Wir bieten erstklassige digitale Lösungen für Ihr persönliches Gesundheitsmanagement.",
+            seo: `<h2>Warum den BMI prüfen?</h2><p>Der Body-Mass-Index ist ein wichtiger Indikator, der von medizinischen Fachkräften zur Einstufung gesundheitlicher Risiken verwendet wird. Ein regelmäßiges Monitoring hilft bei der Aufrechterhaltung eines gesunden und ausgewogenen Lebensstils.</p><h2>Genauigkeit zählt</h2><p>Unser Tool liefert sofortige Ergebnisse basierend auf Ihrer Größe und Ihrem Gewicht mit extrem hoher Präzision. Es ist der perfekte Weg, um Ihren persönlichen Fitness-Fortschritt über die Zeit professionell zu verfolgen.</p>`,
             unit: "Konverter", perc: "Prozent", vat: "MwSt", loan: "Kredit", 
             disc: "Rabatt", tip: "Trinkgeld", cur: "Währung",
             privacy: "Datenschutz", terms: "AGB",
             s1: "Untergewicht", s2: "Normalgewicht", s3: "Übergewicht", s4: "Adipositas",
-            privText: "<h2>Datenschutz</h2><p>Ihre Daten bleiben auf Ihrem Gerät.</p>",
-            termsText: "<h2>AGB</h2><p>Der BMI-Wert dient nur zur Information.</p>"
+            privText: "<h2>Datenschutz</h2><p>Wir speichern oder verfolgen Ihre Gesundheitsdaten in keiner Weise. Alle Berechnungen werden sofort lokal in Ihrem Webbrowser durchgeführt.</p>",
+            termsText: "<h2>AGB</h2><p>Der ermittelte BMI-Wert dient ausschließlich zu Informationszwecken. Bitte konsultieren Sie einen qualifizierten Arzt für Beratung.</p>"
         }
     };
 
