--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="8boxzAKQUKKF8IEuVEX1wX8aUwcdch3Q11BgfGM3vkM" />
     <title>BMI Calculator - SmartHelper.io</title>
     <meta id="meta-desc" name="description" content="Professional BMI Calculator - analyze your weight and body mass index instantly for better health management. Precise results based on WHO standards.">
     <style>
@@ -160,7 +161,7 @@
             desc: "Professioneller BMI-Rechner - analysieren Sie Ihr Gewicht und Ihren Body-Mass-Index sofort für Ihre Gesundheit.",
             weight: "Gewicht (kg):", height: "Größe (cm):", bmiRes: "Ihr BMI:",
             other: "Andere Elite-Tools", 
-            footer: "SmartHelper.io ist Ihr erstklassiges Ziel für hochpräzise Gesundheitsinstrumente und die detaillierte Analyse der Körpermasse. Unser BMI-Rechner verwendet die offizielle Standardformel der WHO, um Ihnen dabei zu helfen, Ihren körperlichen Zustand mit maximaler Genauigkeit zu überwachen. Alle Ihre Daten werden ausschließlich lokal verarbeitet, um sicherzustellen, dass Ihre privaten Gesundheitsinformationen absolut sicher, geschützt und vertraulich bleiben. Wir bieten erstklassige digitale Lösungen für Ihr persönliches Gesundheitsmanagement.",
+            footer: "SmartHelper.io ist Ihr erstklassiges Ziel für hochpräzise Gesundheitsinstrumente und die detaillierte Analyse der Körpermasse. Unser BMI-Rechner verwendet die offizielle Standardformel der WHO, um Ihnen dabei zu helfen, Ihren körperlichen Zustand mit maximaler Genauigkeit zu überwachen. Alle Ihre Daten werden ausschließlich lokal verarbeitet, um sicherzustellen, dass Ihre privaten Gesundheitsinformationen absolut sicher, geschützt und vertraulich bleiben. Wir bieten erstklassige digitale Lösungen für Ihr persönliches Gesundheitsmanagements.",
             seo: `<h2>Warum den BMI prüfen?</h2><p>Der Body-Mass-Index ist ein wichtiger Indikator, der von medizinischen Fachkräften zur Einstufung gesundheitlicher Risiken verwendet wird. Ein regelmäßiges Monitoring hilft bei der Aufrechterhaltung eines gesunden und ausgewogenen Lebensstils.</p><h2>Genauigkeit zählt</h2><p>Unser Tool liefert sofortige Ergebnisse basierend auf Ihrer Größe und Ihrem Gewicht mit extrem hoher Präzision. Es ist der perfekte Weg, um Ihren persönlichen Fitness-Fortschritt über die Zeit professionell zu verfolgen.</p>`,
             unit: "Konverter", perc: "Prozent", vat: "MwSt", loan: "Kredit", 
             disc: "Rabatt", tip: "Trinkgeld", cur: "Währung",
